Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71444

[REG: 5.11-5.12] Segfault on any 5.12.0 version

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.12.0 RC
    • 5.12.0 Beta 3
    • None
    • Ubuntu 18.04 64bit, KDE Plasma 5.14
    • All
    • 018df56aa6804908bcdf5c4f380c1fe9366ce324 (qt/qtquickcontrols2/5.12.0)

      At startup, my application segfaults with Qt 5.12.0 (any version)

      It never happened before with any of the previous Qt 5 versions.

      I tried to debug the exact point where it segfaults but I couldn't find the precise spot. It is somewhere in the QML engine.

      Following the main thread trace. Attached the full stack trace exported from Qt Creator.

      Worth to mention that I see a ton of warnings related to QQuickAbstractDialog, as mentioned in https://bugreports.qt.io/browse/QTBUG-70374

      1 QQuickItem::setParentItem qquickitem.cpp 2696 0x7ffff74ee251 
      2 QQuickPage::setFooter qquickpage.cpp 347 0x7fffa3ae38e5 
      3 QQuickDialog::setFooter qquickdialog.cpp 317 0x7fffa3acfe22 
      4 QQuickDialog::qt_static_metacall moc_qquickdialog_p.cpp 403 0x7fffa3b1b3b8 
      5 QQmlPropertyData::writeProperty qqmlpropertycache_p.h 346 0x7ffff4ae99c6 
      6 QObjectPointerBinding::write qqmlbinding.cpp 701 0x7ffff4ae99c6 
      7 QQmlNonbindingBinding::doUpdate qqmlbinding.cpp 249 0x7ffff4aeb39c 
      8 QQmlBinding::update qqmlbinding.cpp 185 0x7ffff4ae7f33 
      9 QQmlObjectCreator::finalize qqmlobjectcreator.cpp 1346 0x7ffff4af4cd1 
      10 QQmlComponentPrivate::complete qqmlcomponent.cpp 923 0x7ffff4a7b3c7 
      11 QQmlComponentPrivate::completeCreate qqmlcomponent.cpp 959 0x7ffff4a7b4e2 
      12 QQmlComponent::create qqmlcomponent.cpp 785 0x7ffff4a7b2da 
      13 QQuickView::continueExecute qquickview.cpp 477 0x7ffff75927bf 
      14 QQuickViewPrivate::execute qquickview.cpp 107 0x7ffff7592bff 
      15 App::startup app.cpp 173 0x5555555986d0 
      16 main main.cpp 106 0x555555596552

        1. 5.12.0_beta3_full_trace.txt
          53 kB
          Massimo Callegari
        2. quick_segfault.zip
          17 kB
          Massimo Callegari
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            liaqi Liang Qi
            mcallegari79 Massimo Callegari
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes