QQuickPage: fix a typo to avoid a crash

when setting null to footer

Fixes: QTBUG-71444
Change-Id: Id4b0a3fd7aa104357674b4e2be6206894f8878da
Reviewed-by: J-P Nurmi <jpnurmi@gmail.com>
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>